src/ui/snapshots/cctop__ui__snapshot__remote_host_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions╭ Remote · pick a host ────────────────────────────────────╮─────────╮
│   LAST▲ │ > █                                                      │OJECT    │
│●    now │                                                          │x the ch…┃
│●     7m │   nz-b-procurementdb1         also procdb                │i        │
╰─────────│ › devbox                                                 │─────────╯
╭ Info  Pe│   gpu-01                      also gpu, trainer          │  Context╮
│Root /usr│                                                          │         │
│    PID  │ sshfs not installed — the tab will offer to install it   │         │
│   4101  │ Enter next   ↑↓ choose   Esc back                        │         │
│   4188  ╰──────────────────────────────────────────────────────────╯         │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
